# rose-gb

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  rose.cpp  rose.h
src/cartridge/: cartridge.h
src/cpu/: cpu.h
src/mmu/: mmu.h
